update jdbc util